[add] calculate pet age function

--- a/FeedPet/templates/pet/pet_detail.html
+++ b/FeedPet/templates/pet/pet_detail.html
@@ -41,8 +41,8 @@
                     <td>{{ pet.weight }} KG</td>
                 </tr>
                 <tr>
-                    <td>生日</td>
-                    <td>{{ pet.birthday }}</td>
+                    <td>年齡</td>
+                    <td>{{ age_year }}歲{{ age_month }}個月</td>
                 </tr>
             </tbody>
         </table>
