--- a/FeedPet/templates/feed/feed.html
+++ b/FeedPet/templates/feed/feed.html
@@ -7,24 +7,24 @@
 
 {% block content %}
 
-<div class="ts relaxed grid">
+<!-- <div class="ts relaxed grid">
     <div class="ten wide column">
-        <form class="ts form horizontal">  
+        <form class="ts form horizontal">
 
 
-             <div class="field">
+            <div class="field">
 
                 <div class="ts horizontal checkboxes">
                     <div class="ts radio checkbox">
                         <input id="dog" type="radio" name="pettype">
                         <label for="dog">
-                          <img class="ts small rounded image" src="{% static 'images/dogicon.png' %}">
+                            <img class="ts small rounded image" src="{% static 'images/dogicon.png' %}">
                         </label>
                     </div>
                     <div class="ts radio checkbox">
                         <input id="cat" type="radio" name="pettype">
                         <label for="cat">
-                         <img class="ts small rounded image" src="{% static 'images/caticon.png' %}">
+                            <img class="ts small rounded image" src="{% static 'images/caticon.png' %}">
                         </label>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                     <option>成犬中高強度活動</option>
                     <option>成長期幼犬</option>
                     <option>懷孕母犬</option>
-                        <option>哺乳母犬</option>
+                    <option>哺乳母犬</option>
                 </select>
             </div>
             <div class="field required">
@@ -62,47 +62,188 @@
             </div>
             <button class="ts button">計算餵食量</button>
             <button class="ts button">
-            <a href="{% url 'feed:feed_recommendation' %}"> 推薦飼料</a>
-           </button>
-   <button class="ts button">
-            <a href="{% url 'feed:feeding_record' %}"> 查詢餵食紀錄</a>
-           </button>
+                <a href="{% url 'feed:feed_recommendation' %}"> 推薦飼料</a>
+            </button>
+            <button class="ts button">
+                <a href="{% url 'feed:feeding_record' %}"> 查詢餵食紀錄</a>
+            </button>
         </form>
     </div>
     <div class="six wide column">
-    <form class="ts form horizontal">  
+        <form class="ts form horizontal">
 
 
             <div class="field">
                 <label>罐頭</label>
                 <input type="text">
             </div>
-             <div class="field">
+            <div class="field">
                 <label>生食</label>
                 <input type="text">
             </div>
-              <div class="field">
+            <div class="field">
                 <label>凍乾</label>
                 <input type="text">
             </div>
-               <div class="field">
+            <div class="field">
                 <label>乾飼料</label>
                 <input type="text">
             </div>
-               <div class="field">
+            <div class="field">
                 <label>水</label>
                 <input type="text">
             </div>
-        
+
 
         </form>
 
 
 
     </div>
-    
+
+</div> -->
+
+<div id="first" class="ts top attached tabbed menu">
+    <a class="active item" data-tab="狗狗">狗狗</a>
+    <a class="item" data-tab="貓貓">貓貓</a>
 </div>
-
-
+<div data-tab="狗狗" class="ts active bottom attached tab segment">
+    <div class="ts relaxed grid">
+        <div class="ten wide column">
+            <form class="ts form horizontal">
+                <mark>這裡是狗狗</mark>
+                <div class="field required">
+                    <label>選擇哪隻寵物</label>
+                    <select>
+                        <option>可爾必思</option>
+                        <option>肉鬆</option>
+                        <option>來福</option>
+                    </select>
+                </div>
+                <div class="field required">
+                    <label>重量</label>
+                    <input type="text">
+                </div>
+                <div class="field required">
+                    <label>活動類型</label>
+                    <select>
+                        <option>成犬室內中低活動</option>
+                        <option>成犬中高強度活動</option>
+                        <option>成長期幼犬</option>
+                        <option>懷孕母犬</option>
+                        <option>哺乳母犬</option>
+                    </select>
+                </div>
+                <div class="field required">
+                    <label>有無結紮</label>
+                    <select>
+                        <option>有</option>
+                        <option>無</option>
+                    </select>
+                </div>
+                <button class="ts button">計算餵食量</button>
+                <button class="ts button">
+                    <a href="{% url 'feed:feed_recommendation' %}"> 推薦飼料</a>
+                </button>
+                <button class="ts button">
+                    <a href="{% url 'feed:feeding_record' %}"> 查詢餵食紀錄</a>
+                </button>
+            </form>
+        </div>
+        <div class="six wide column">
+            <form class="ts form horizontal">
+                <div class="field">
+                    <label>罐頭</label>
+                    <input type="text">
+                </div>
+                <div class="field">
+                    <label>生食</label>
+                    <input type="text">
+                </div>
+                <div class="field">
+                    <label>凍乾</label>
+                    <input type="text">
+                </div>
+                <div class="field">
+                    <label>乾飼料</label>
+                    <input type="text">
+                </div>
+                <div class="field">
+                    <label>水</label>
+                    <input type="text">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div data-tab="貓貓" class="ts bottom attached tab segment">
+    <div class="ts relaxed grid">
+        <div class="ten wide column">
+            <form class="ts form horizontal">
+                <mark>這裡是貓貓</mark>
+                <div class="field required">
+                    <label>選擇哪隻寵物</label>
+                    <select>
+                        <option>可爾必思</option>
+                        <option>肉鬆</option>
+                        <option>來福</option>
+                    </select>
+                </div>
+                <div class="field required">
+                    <label>重量</label>
+                    <input type="text">
+                </div>
+                <div class="field required">
+                    <label>活動類型</label>
+                    <select>
+                        <option>成犬室內中低活動</option>
+                        <option>成犬中高強度活動</option>
+                        <option>成長期幼犬</option>
+                        <option>懷孕母犬</option>
+                        <option>哺乳母犬</option>
+                    </select>
+                </div>
+                <div class="field required">
+                    <label>有無結紮</label>
+                    <select>
+                        <option>有</option>
+                        <option>無</option>
+                    </select>
+                </div>
+                <button class="ts button">計算餵食量</button>
+                <button class="ts button">
+                    <a href="{% url 'feed:feed_recommendation' %}"> 推薦飼料</a>
+                </button>
+                <button class="ts button">
+                    <a href="{% url 'feed:feeding_record' %}"> 查詢餵食紀錄</a>
+                </button>
+            </form>
+        </div>
+        <div class="six wide column">
+            <form class="ts form horizontal">
+                <div class="field">
+                    <label>罐頭</label>
+                    <input type="text">
+                </div>
+                <div class="field">
+                    <label>生食</label>
+                    <input type="text">
+                </div>
+                <div class="field">
+                    <label>凍乾</label>
+                    <input type="text">
+                </div>
+                <div class="field">
+                    <label>乾飼料</label>
+                    <input type="text">
+                </div>
+                <div class="field">
+                    <label>水</label>
+                    <input type="text">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
