--- a/FeedPet/templates/pet/add_pet.html
+++ b/FeedPet/templates/pet/add_pet.html
@@ -11,11 +11,11 @@
 <form class="ts form" method="post" enctype='multipart/form-data' action="{% url 'master:mypet/add_pet' %}">
     {% csrf_token %}
     <div class="field">
-        <label for="petName">名字</label>
+        <label>名字</label>
         <input type="text" id="petName" name="petName">
     </div>
     <div class="fields">
-        <div class="three wide field">
+        <div class="field">
             <label>類別</label>
             <div class="ts checkboxes">
                 <div class="ts radio checkbox">
@@ -29,7 +29,7 @@
             </div>
         </div>
 
-        <div class="three wide field">
+        <div class="field">
             <label>性別</label>
             <div class="ts checkboxes">
                 <div class="ts radio checkbox">
@@ -42,13 +42,8 @@
                 </div>
             </div>
         </div>
-        <div class="ten wide field">
-            <label for="petType">品種</label>
-            <input type="text" id="petType" name="petType">
-        </div>
-    </div>
-    <div class="fields">
-        <div class="five wide field">
+
+        <div class="field">
             <label>是否結紮</label>
             <div class="ts checkboxes">
                 <div class="ts radio checkbox">
@@ -61,23 +56,35 @@
                 </div>
             </div>
         </div>
-        <div class="eleven wide field">
-            <label for="weight">體重</label>
+    </div>
+    <div class="fields">
+        <div class="eight wide field">
+            <label>品種</label>
+            <input type="text" id="petType" name="petType">
+        </div>
+        <div class="eight wide field">
+            <label>體重</label>
             <input type="number" id="weight" name="weight">
         </div>
     </div>
     <div class="field">
-        <label for="birthday">生日</label>
+        <label>生日</label>
         <input type="date" id="birthday" name="birthday" />
     </div>
-    <div class="field">
-        <label for="image">照片</label>
-        <input type="file" id="image" name="image">
+    <div class="fields">
+        <div class="five wide field">
+            <label>照片</label>
+            <img id="preview_progressbarTW_img" src="#" height="200" width="150" />
+        </div>
+        <div class="eleven wide field">
+            <input type="file" id="imgInp" name="image" onchange="readURL(this)" targetID="preview_progressbarTW_img"
+                accept="image/gif, image/jpeg, image/png"/>
+        </div>
     </div>
 
     <button class="ts positive button" type="submit">確認</button>
     <input class="ts button" type="button" onclick="location.href='/mypet/'" value="取消">
-    <input type="hidden" name="next" value="{% url 'master:mypet' %}" />
+    <input type="hidden" name="next" value="{% url 'master:mypet' %}"/>
 </form>
 
 {% endblock content %}
