--- a/FeedPet/templates/pet/update_pet_detail.html
+++ b/FeedPet/templates/pet/update_pet_detail.html
@@ -7,19 +7,24 @@
 
 {% block content %}
 
-<div class="ts relaxed grid">
-    <div class="seven wide column">
-        <img class="ts medium image" src="{{ pet.image.url }}"><br>
-        <div class="field">
-            <label for="image">照片</label>
-            <input type="file" id="image" name="image">
+<form class="ts form" method="post" enctype='multipart/form-data'
+    action="{% url 'master:mypet/update_pet_detail' pet.id %}">
+    {% csrf_token %}
+    <div class="ts relaxed grid">
+        <div class="seven wide column">
+            <div class="field">
+                <label for="image">照片(原本)</label>
+                <img class="ts medium image" src="{{ pet.image.url }}">
+            </div>
+            <div class="field">
+                <label for="image">照片(更換)</label>
+                <input type="file" id="imgInp_chg" name="image" onchange="readURL(this)"
+                    targetID="preview_progressbarTW_img_chg" accept="image/gif, image/jpeg, image/png"/>
+                <img id="preview_progressbarTW_img_chg" src="#" height="200" width="150"/>
+            </div>
         </div>
-    </div>
 
-    <div class="eight wide column">
-        <form class="ts form" method="post" enctype='multipart/form-data'
-            action="{% url 'master:mypet/update_pet_detail' pet.id %}">
-            {% csrf_token %}
+        <div class="eight wide column">
             <div class="field">
                 <label>名字</label>
                 <input type="text" id="petName" name="petName" value="{{ pet.petName }}">
@@ -32,13 +37,13 @@
                 <label>是否結紮</label>
                 <div class="ts checkboxes">
                     <div class="ts radio checkbox">
-                        <input id="yes" type="radio" name="ligation"
-                            {% if pet.ligation == "Yes" %}checked="checked" {% endif %} value="Yes">
+                        <input id="yes" type="radio" name="ligation" {% if pet.ligation == "Yes" %}checked="checked"
+                            {% endif %} value="Yes">
                         <label for="yes">有</label>
                     </div>
                     <div class="ts radio checkbox">
-                        <input id="no" type="radio" name="ligation"
-                            {% if pet.ligation == "No" %}checked="checked" {% endif %} value="No">
+                        <input id="no" type="radio" name="ligation" {% if pet.ligation == "No" %}checked="checked"
+                            {% endif %} value="No">
                         <label for="no">無</label>
                     </div>
                 </div>
@@ -47,8 +52,8 @@
             <button class="ts positive button" type="submit">確認</button>
             <input class="ts button" type="button" onclick="location.href='/mypet/pet_detail/{{pet.id}}'" value="取消">
             <input type="hidden" name="next" value="{% url 'master:mypet/pet_detail' pet.id %}" />
-        </form>
+        </div>
     </div>
-</div>
+</form>
 
 {% endblock content %}
