add total feed list

--- a/FeedPet/templates/feed/feed.html
+++ b/FeedPet/templates/feed/feed.html
@@ -243,4 +243,8 @@
     </div>
 </div>
 
+
+ <button class="ts button">
+ <a href="{% url 'feed:feed_list' %}">查詢所有飼料 </a>
+ </button>
 {% endblock content %}
