--- a/FeedPet/templates/pet/add_pet.html
+++ b/FeedPet/templates/pet/add_pet.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-<form class="ts form" method="post" enctype='multipart/form-data' action="{% url 'master:mypet/add_pet' %}">
+<form name="addpet" class="ts form" method="post" enctype='multipart/form-data' action="{% url 'master:mypet/add_pet' %}">
     {% csrf_token %}
     <div class="field">
         <label>名字</label>
@@ -60,19 +60,11 @@
 
 {% comment %} 增加活動類型的判斷js用迴圈增加option {% endcomment %}
 
-    <div class="field required">
+    <div class="field required" >
                 <label>活動類型</label>
-                 <select>
-                    <option>成犬室內中低活動</option>
-                    <option>成犬中高強度活動</option>
-                    <option>成長期幼犬</option>
-                    <option>懷孕母犬</option>
-                    <option>哺乳母犬</option>
-                    <option>成貓室內中低活動</option>
-                    <option>成貓中高強度活動</option>
-                    <option>成長期幼犬</option>
-                    <option>懷孕母貓</option>
-                    <option>哺乳母貓</option>
+                 <select id="petsubtype">
+                  
+                   
                 </select>
             </div>
 
