--- a/FeedPet/templates/pet/pet_feeding_record.html
+++ b/FeedPet/templates/pet/pet_feeding_record.html
@@ -13,9 +13,10 @@
             <th class="one wide">編號</th>
             
             <th>飼料名</th>
-            <th>餵食時間</th>
-            <th >餵食的分量(g)</th>
-        <th  class="one wide"></th>
+            <th class="two wide">餵食時間</th>
+            <th class="two wide">飼料的分量(g)</th>
+             <th class="two wide" >水量</th>
+            <th class="one wide"></th>
         </tr>
     </thead>
     <tbody>
@@ -23,7 +24,7 @@
         <td>1</td>
             <td>飼料1</td>
             <td>2019-11-30</td>
-        
+            <td>100</td>
             <td>100</td>
 
                 <td>
@@ -36,7 +37,10 @@
             <tr>
             <td></td>
             <td> <input type="text"></td>
-            <td><input type="date"></td>
+            <td><div id="showDate"></div>
+            </td>
+                      
+            <td><input type="text"></td>
             <td><input type="text"></td>
                    <td>
                    <button class="ts icon button positive">
