增加register.html前端驗證

--- a/FeedPet/templates/master/update_profile.html
+++ b/FeedPet/templates/master/update_profile.html
@@ -15,7 +15,7 @@
     </div>
     <div class="seven wide field">
         <label>信箱</label>
-        <input type="text" id="email" name="email" value="{{ form.email.value }}">
+        <input type="email" id="email" name="email" value="{{ form.email.value }}">
     </div>
     <div class="field">
         <label>性別</label>
