--- a/FeedPet/templates/pet/pet_feeding_record.html
+++ b/FeedPet/templates/pet/pet_feeding_record.html
@@ -6,7 +6,10 @@
 {% endblock header %}
 
 {% block content %}
-
+ 
+  <button class="ts button">
+                    <a href="{% url 'feed:feed_recommendation' %}"> 推薦飼料</a>
+                </button>
 <table class="ts table">
     <thead>
         <tr>
