--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -105,7 +105,7 @@
 
                 {% for message in messages %}
                 <div class="ts {{message.tags}} message">
-                
+                <button class="ts close button"></button>
                     <div class="header">{{ message }}</div>
 
                   
