--- a/FeedPet/templates/pet/update_pet_detail.html
+++ b/FeedPet/templates/pet/update_pet_detail.html
@@ -33,7 +33,7 @@
                 <label>體重</label>
                 <input type="number" id="weight" name="weight" value="{{ pet.weight }}">
             </div>
-            <div class="field">
+            <div class="field" id="ligation">
                 <label>是否結紮</label>
                 <div class="ts checkboxes">
                     <div class="ts radio checkbox">
