--- a/FeedPet/templates/pet/add_pet.html
+++ b/FeedPet/templates/pet/add_pet.html
@@ -8,7 +8,8 @@
 
 {% block content %}
 
-<form name="addpet" class="ts form" method="post" enctype='multipart/form-data' action="{% url 'master:mypet/add_pet' %}">
+<form name="addpet" class="ts form" method="post" enctype='multipart/form-data'
+    action="{% url 'master:mypet/add_pet' %}">
     {% csrf_token %}
     <div class="field">
         <label>名字</label>
@@ -28,7 +29,7 @@
                 </div>
             </div>
         </div>
-    
+
         <div class="field">
             <label>性別</label>
             <div class="ts checkboxes">
@@ -58,30 +59,23 @@
         </div>
     </div>
 
-{% comment %} 增加活動類型的判斷js用迴圈增加option {% endcomment %}
+    {% comment %} 增加活動類型的判斷js用迴圈增加option {% endcomment %}
 
-    <div class="field required" >
-                <label>活動類型</label>
-                 <select id="petsubtype">
-                  
-                   
-                </select>
-            </div>
+    <div class="field">
+        <label>活動類型</label>
+        <select id="petType" name="petType">
+        </select>
+    </div>
 
-
-   <div class="fields">
-        <div class="eight wide field">
-            <label>品種</label>
-            <input type="text" id="petType" name="petType">
-        </div>
-        <div class="eight wide field">
+    <div class="fields">
+        <div class="field">
             <label>體重</label>
             <input type="number" id="weight" name="weight">
         </div>
-    </div>
-    <div class="field">
-        <label>生日</label>
-        <input type="date" id="birthday" name="birthday" />
+        <div class="field">
+            <label>生日</label>
+            <input type="date" id="birthday" name="birthday" />
+        </div>
     </div>
     <div class="fields">
         <div class="five wide field">
@@ -90,13 +84,13 @@
         </div>
         <div class="eleven wide field">
             <input type="file" id="imgInp" name="image" onchange="readURL(this)" targetID="preview_progressbarTW_img"
-                accept="image/gif, image/jpeg, image/png"/>
+                accept="image/gif, image/jpeg, image/png" />
         </div>
     </div>
 
     <button class="ts positive button" type="submit">確認</button>
     <input class="ts button" type="button" onclick="location.href='/mypet/'" value="取消">
-    <input type="hidden" name="next" value="{% url 'master:mypet' %}"/>
+    <input type="hidden" name="next" value="{% url 'master:mypet' %}" />
 </form>
 
 {% endblock content %}
