--- a/FeedPet/templates/feed/feed.html
+++ b/FeedPet/templates/feed/feed.html
@@ -104,46 +104,53 @@
 </div> -->
 
 <div id="first" class="ts top attached tabbed menu">
-    <a class="active item" data-tab="狗狗">狗狗</a>
-    <a class="item" data-tab="貓貓">貓貓</a>
+    <a class="{{dogactive}} item" data-tab="狗狗">狗狗</a>
+    <a class="{{catactive}}item" data-tab="貓貓">貓貓</a>
 </div>
 <div data-tab="狗狗" class="ts active bottom attached tab segment">
     <div class="ts relaxed grid">
         <div class="ten wide column">
-            <form class="ts form horizontal">
+            <form class="ts form horizontal" action="/feed/feed_calculation/" method="post">
                 <mark>這裡是狗狗</mark>
                 {% if user.is_authenticated %}
                 <div class="field required">
                     <label>選擇哪隻寵物</label>
+
                     <select>
-                        <option>可爾必思</option>
-                        <option>肉鬆</option>
-                        <option>來福</option>
+                        {% for dog in dogs %}
+                        <option value="{{ dog.petName }}"> {{ dog.petName }}</option>
+                        {% endfor %}
                     </select>
+
                 </div>
                 {% endif %}
                 <div class="field required">
                     <label>重量</label>
-                    <input type="text">
+                    <input name="weight" type="text" value="{{ weight}}">
                 </div>
                 <div class="field required">
                     <label>活動類型</label>
-                    <select>
-                        <option>成犬室內中低活動</option>
-                        <option>成犬中高強度活動</option>
-                        <option>成長期幼犬</option>
-                        <option>懷孕母犬</option>
-                        <option>哺乳母犬</option>
+                    <select name="type">
+                        <option value="1">成犬(室內/中低活動量)</option>
+                        <option value="2">成犬(中高度活動量)</option>
+                        <option value="3">需增重成犬(輸入目標體重)</option>
+                        <option value="4">需減肥成犬(輸入目標體重)</option>
+                        <option value="5">成長期幼犬(斷奶至4個月)</option>
+                        <option value="6">成長期幼犬(4個月至10個月)</option>
+                        <option value="7">懷孕母犬(前42天)</option>
+                        <option value="8">懷孕母犬(最後21天)</option>
+                        <option value="9">懷孕母犬</option>
                     </select>
                 </div>
                 <div class="field required">
                     <label>有無結紮</label>
-                    <select>
-                        <option>有</option>
-                        <option>無</option>
+                    <select name="ligation">
+                        <option value = 'yes'>有</option>
+                        <option value = 'no'>無</option>
                     </select>
                 </div>
-                <button class="ts button">計算餵食量</button>
+                <button class="ts button" name="petclass" value="dog">計算餵食量</button>
+<!--                <input name="petclass" value="dog" type="submit">-->
                 <button class="ts button">
                     <a href="{% url 'feed:feed_recommendation' %}"> 推薦飼料</a>
                 </button>
@@ -156,19 +163,19 @@
             <form class="ts form horizontal">
                 <div class="field">
                     <label>罐頭</label>
-                    <input type="text">
+                    <input type="text" value="{{ result.3}}">
                 </div>
                 <div class="field">
                     <label>生食</label>
-                    <input type="text">
+                    <input type="text" value="{{ result.1}}">
                 </div>
                 <div class="field">
                     <label>凍乾</label>
-                    <input type="text">
+                    <input type="text" value="{{ result.2}}">
                 </div>
                      <div class="field">
                     <label>水</label>
-                    <input type="text">
+                    <input type="text" value="{{ result.0}}">
                 </div>
             </form>
         </div>
@@ -220,23 +227,22 @@
             </form>
         </div>
         <div class="six wide column">
-            <form class="ts form horizontal">
+           <form class="ts form horizontal">
                 <div class="field">
                     <label>罐頭</label>
-                    <input type="text">
+                    <input type="text" value="{{ result.3}}">
                 </div>
                 <div class="field">
                     <label>生食</label>
-                    <input type="text">
+                    <input type="text" value="{{ result.1}}">
                 </div>
                 <div class="field">
                     <label>凍乾</label>
-                    <input type="text">
+                    <input type="text" value="{{ result.2}}">
                 </div>
-            
-                <div class="field">
+                     <div class="field">
                     <label>水</label>
-                    <input type="text">
+                    <input type="text" value="{{ result.0}}">
                 </div>
             </form>
         </div>
